force-app/main/default/objects/SIS_Skill__c/SIS_Skill__c.object-meta.xml
<CustomObject>
    <label>Compétence</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compétences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>