force-app/main/default/objects/SIS_Skill__c/fields/Family_Description_EN__c.field-meta.xml
<CustomField>
    <fullName>Family_Description_EN__c</fullName>
    <formula>SIS_Skills_Family__r.SIS_Description_EN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Description EN</label>
    <type>Text</type>
</CustomField>