force-app/main/default/objects/SIS_Skill__c/fields/Family_Description_FR__c.field-meta.xml
<CustomField>
    <fullName>Family_Description_FR__c</fullName>
    <formula>SIS_Skills_Family__r.SIS_Description_FR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Description FR</label>
    <type>Text</type>
</CustomField>