force-app/main/default/objects/SIS_Skill__c/fields/Learning_Goal__c.field-meta.xml
<CustomField>
    <fullName>Learning_Goal__c</fullName>
    <formula>IF(
 ISPICKVAL(SIS_Skills_Family__r.SIS_Skills_Family_Type__c, &quot;Learning Goal&quot;),
  SIS_Skills_Family__r.Name,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Learning Goal</label>
    <type>Text</type>
</CustomField>