force-app/main/default/objects/SIS_Skill__c/fields/SIS_Objective_FR__c.field-meta.xml
<CustomField>
    <fullName>SIS_Objective_FR__c</fullName>
    <label>Objective FR</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>