force-app/main/default/objects/SIS_Skill__c/fields/SIS_Short_name__c.field-meta.xml
<CustomField>
    <fullName>SIS_Short_name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Short name</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>