force-app/main/default/objects/SIS_Skill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SIS_Skills_Family__c</columns>
    <columns>SIS_Short_name__c</columns>
    <columns>SIS_Label__c</columns>
    <columns>SIS_Objective_FR__c</columns>
    <columns>SIS_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les compétences</label>
</ListView>