force-app/main/default/objects/SIS_Skill__c/listViews/Global_BBA.listView-meta.xml
<ListView>
    <fullName>Global_BBA</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SIS_Skills_Family__c</field>
        <operation>startsWith</operation>
        <value>Famille</value>
    </filters>
    <label>Global BBA</label>
</ListView>